# http

./: CMakeLists.txt
doc_root/: contact.html  index.html
mobile/: Contact-dopost.json  about.html  contact.html  index.html  institute.html  news-detail-id-29.html  news-detail-id-30.html  news-detail-id-31.html  news.html  robots.txt  services.html
mobile/Public/css/: wap_global.css
mobile/Public/js/: iui.js
server/: CMakeLists.txt  connection.cpp  main.cpp  mime_types.cpp  request_handler.cpp  request_handler.hpp  request_parser.cpp  request_parser.hpp
server_threaded/: CMakeLists.txt  connection.cpp  connection.hpp  main.cpp  request_handler.cpp  request_parser.hpp  server.cpp  server.hpp
